@@ -121,124 +121,205 @@ typedef struct _quad {
 #ifdef __GNUC__
 static const guint8 _shadow[] __attribute__ ((__aligned__ (4))) =
 #else
-    static const guint8 _shadow[] =
+static const guint8 _shadow[] =
 #endif
 { ""
   /* Pixbuf magic (0x47646b50) */
   "GdkP"
-  /* length: header (24) + pixel_data (400) */
-  "\0\0\1\250"
-  /* pixdata_type (0x1010002) */
-  "\1\1\0\2"
-  /* rowstride (40) */
-  "\0\0\0("
-  /* width (10) */
-  "\0\0\0\12"
-  /* height (10) */
-  "\0\0\0\12"
+  /* length: header (24) + pixel_data (1705) */
+  "\0\0\6\301"
+  /* pixdata_type (0x2010002) */
+  "\2\1\0\2"
+  /* rowstride (96) */
+  "\0\0\0`"
+  /* width (24) */
+  "\0\0\0\30"
+  /* height (22) */
+  "\0\0\0\26"
   /* pixel_data: */
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\1\0\0\0\2\0\0\0\2\0\0\0\1\0\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\1\0\0\0\3\0\0\0\5\0\0\0\7\0\0\0\7\0\0\0\5"
-  "\0\0\0\3\0\0\0\1\0\0\0\0\0\0\0\1\0\0\0\3\0\0\0\7\0\0\0\15\0\0\0\22\0"
-  "\0\0\22\0\0\0\15\0\0\0\7\0\0\0\3\0\0\0\1\0\0\0\1\0\0\0\5\0\0\0\15\0\0"
-  "\0\30\0\0\0\40\0\0\0\40\0\0\0\30\0\0\0\15\0\0\0\5\0\0\0\1\0\0\0\2\0\0"
-  "\0\7\0\0\0\22\0\0\0\40\377\377\377\377\0\0\0+\0\0\0\40\0\0\0\22\0\0\0"
-  "\7\0\0\0\2\0\0\0\2\0\0\0\7\0\0\0\22\0\0\0\40\0\0\0+\0\0\0+\0\0\0\40\0"
-  "\0\0\22\0\0\0\7\0\0\0\2\0\0\0\1\0\0\0\5\0\0\0\15\0\0\0\30\0\0\0\40\0"
-  "\0\0\40\0\0\0\30\0\0\0\15\0\0\0\5\0\0\0\1\0\0\0\1\0\0\0\3\0\0\0\7\0\0"
-  "\0\15\0\0\0\22\0\0\0\22\0\0\0\15\0\0\0\7\0\0\0\3\0\0\0\1\0\0\0\0\0\0"
-  "\0\1\0\0\0\3\0\0\0\5\0\0\0\7\0\0\0\7\0\0\0\5\0\0\0\3\0\0\0\1\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\1\0\0\0\2\0\0\0\2\0\0\0\1\0\0\0\0\0\0"
-  "\0\0\0\0\0\0"
+  "\207\0\0\0\0\212\0\0\0\1\214\0\0\0\0\2\0\0\0\1\0\0\0\2\202\0\0\0\3\202"
+  "\0\0\0\4\202\0\0\0\5\202\0\0\0\4\202\0\0\0\3\2\0\0\0\2\0\0\0\1\210\0"
+  "\0\0\0\10\0\0\0\1\0\0\0\2\0\0\0\3\0\0\0\5\0\0\0\6\0\0\0\10\0\0\0\11\0"
+  "\0\0\12\202\0\0\0\13\10\0\0\0\12\0\0\0\11\0\0\0\10\0\0\0\6\0\0\0\5\0"
+  "\0\0\3\0\0\0\2\0\0\0\1\206\0\0\0\0\10\0\0\0\2\0\0\0\3\0\0\0\6\0\0\0\11"
+  "\0\0\0\14\0\0\0\17\0\0\0\22\0\0\0\23\202\0\0\0\24\11\0\0\0\23\0\0\0\22"
+  "\0\0\0\17\0\0\0\14\0\0\0\11\0\0\0\6\0\0\0\3\0\0\0\2\0\0\0\1\204\0\0\0"
+  "\0\11\0\0\0\1\0\0\0\3\0\0\0\6\0\0\0\12\0\0\0\17\0\0\0\24\0\0\0\32\0\0"
+  "\0\36\0\0\0\40\202\0\0\0\"\11\0\0\0\40\0\0\0\36\0\0\0\32\0\0\0\24\0\0"
+  "\0\17\0\0\0\12\0\0\0\6\0\0\0\3\0\0\0\1\203\0\0\0\0\12\0\0\0\1\0\0\0\2"
+  "\0\0\0\5\0\0\0\11\0\0\0\17\0\0\0\26\0\0\0\36\0\0\0&\0\0\0,\0\0\0""0\202"
+  "\0\0\0""2\12\0\0\0""0\0\0\0,\0\0\0&\0\0\0\37\0\0\0\27\0\0\0\17\0\0\0"
+  "\11\0\0\0\5\0\0\0\2\0\0\0\1\202\0\0\0\0\12\0\0\0\1\0\0\0\3\0\0\0\6\0"
+  "\0\0\14\0\0\0\24\0\0\0\37\0\0\0)\0\0\0""4\0\0\0<\0\0\0A\202\0\0\0D\12"
+  "\0\0\0A\0\0\0<\0\0\0""4\0\0\0)\0\0\0\37\0\0\0\24\0\0\0\14\0\0\0\6\0\0"
+  "\0\3\0\0\0\1\202\0\0\0\0\12\0\0\0\1\0\0\0\4\0\0\0\10\0\0\0\17\0\0\0\31"
+  "\0\0\0&\0\0\0""3\0\0\0@\0\0\0J\0\0\0Q\202\0\0\0T\12\0\0\0Q\0\0\0J\0\0"
+  "\0@\0\0\0""3\0\0\0&\0\0\0\32\0\0\0\17\0\0\0\10\0\0\0\4\0\0\0\1\202\0"
+  "\0\0\0\12\0\0\0\1\0\0\0\4\0\0\0\11\0\0\0\22\0\0\0\35\0\0\0,\0\0\0;\0"
+  "\0\0J\0\0\0V\0\0\0]\202\0\0\0a\12\0\0\0]\0\0\0V\0\0\0J\0\0\0<\0\0\0,"
+  "\0\0\0\36\0\0\0\22\0\0\0\11\0\0\0\4\0\0\0\2\202\0\0\0\0\12\0\0\0\2\0"
+  "\0\0\5\0\0\0\12\0\0\0\23\0\0\0\40\0\0\0""0\0\0\0A\0\0\0Q\0\0\0^\0\0\0"
+  "f\202\0\0\0k\12\0\0\0f\0\0\0^\0\0\0Q\0\0\0A\0\0\0""0\0\0\0\40\0\0\0\24"
+  "\0\0\0\12\0\0\0\5\0\0\0\2\202\0\0\0\0\12\0\0\0\2\0\0\0\5\0\0\0\13\0\0"
+  "\0\24\0\0\0\"\0\0\0""2\0\0\0D\0\0\0T\0\0\0a\0\0\0j\202\0\0\0o\12\0\0"
+  "\0j\0\0\0a\0\0\0T\0\0\0D\0\0\0""2\0\0\0\"\0\0\0\24\0\0\0\13\0\0\0\5\0"
+  "\0\0\2\202\0\0\0\0\12\0\0\0\2\0\0\0\5\0\0\0\13\0\0\0\24\0\0\0\"\0\0\0"
+  "2\0\0\0D\0\0\0T\0\0\0a\0\0\0j\202\0\0\0o\12\0\0\0j\0\0\0a\0\0\0T\0\0"
+  "\0D\0\0\0""2\0\0\0\"\0\0\0\24\0\0\0\13\0\0\0\5\0\0\0\2\202\0\0\0\0\12"
+  "\0\0\0\2\0\0\0\5\0\0\0\12\0\0\0\23\0\0\0\40\0\0\0""0\0\0\0A\0\0\0Q\0"
+  "\0\0^\0\0\0f\202\0\0\0k\12\0\0\0f\0\0\0^\0\0\0Q\0\0\0A\0\0\0""0\0\0\0"
+  "\40\0\0\0\24\0\0\0\12\0\0\0\5\0\0\0\2\202\0\0\0\0\12\0\0\0\1\0\0\0\4"
+  "\0\0\0\11\0\0\0\22\0\0\0\35\0\0\0,\0\0\0;\0\0\0J\0\0\0V\0\0\0]\202\0"
+  "\0\0a\12\0\0\0]\0\0\0V\0\0\0J\0\0\0<\0\0\0,\0\0\0\36\0\0\0\22\0\0\0\11"
+  "\0\0\0\4\0\0\0\2\202\0\0\0\0\12\0\0\0\1\0\0\0\4\0\0\0\10\0\0\0\17\0\0"
+  "\0\31\0\0\0&\0\0\0""3\0\0\0@\0\0\0J\0\0\0Q\202\0\0\0T\12\0\0\0Q\0\0\0"
+  "J\0\0\0@\0\0\0""3\0\0\0&\0\0\0\32\0\0\0\17\0\0\0\10\0\0\0\4\0\0\0\1\202"
+  "\0\0\0\0\12\0\0\0\1\0\0\0\3\0\0\0\6\0\0\0\14\0\0\0\24\0\0\0\37\0\0\0"
+  ")\0\0\0""4\0\0\0<\0\0\0A\202\0\0\0D\12\0\0\0A\0\0\0<\0\0\0""4\0\0\0)"
+  "\0\0\0\37\0\0\0\24\0\0\0\14\0\0\0\6\0\0\0\3\0\0\0\1\202\0\0\0\0\12\0"
+  "\0\0\1\0\0\0\2\0\0\0\5\0\0\0\11\0\0\0\17\0\0\0\26\0\0\0\36\0\0\0&\0\0"
+  "\0,\0\0\0""0\202\0\0\0""2\12\0\0\0""0\0\0\0,\0\0\0&\0\0\0\37\0\0\0\27"
+  "\0\0\0\17\0\0\0\11\0\0\0\5\0\0\0\2\0\0\0\1\203\0\0\0\0\11\0\0\0\1\0\0"
+  "\0\3\0\0\0\6\0\0\0\12\0\0\0\17\0\0\0\24\0\0\0\32\0\0\0\36\0\0\0\40\202"
+  "\0\0\0\"\11\0\0\0\40\0\0\0\36\0\0\0\32\0\0\0\24\0\0\0\17\0\0\0\12\0\0"
+  "\0\6\0\0\0\3\0\0\0\1\205\0\0\0\0\10\0\0\0\2\0\0\0\3\0\0\0\6\0\0\0\11"
+  "\0\0\0\14\0\0\0\17\0\0\0\22\0\0\0\23\202\0\0\0\24\11\0\0\0\23\0\0\0\22"
+  "\0\0\0\17\0\0\0\14\0\0\0\11\0\0\0\6\0\0\0\3\0\0\0\2\0\0\0\1\205\0\0\0"
+  "\0\10\0\0\0\1\0\0\0\2\0\0\0\3\0\0\0\5\0\0\0\6\0\0\0\10\0\0\0\11\0\0\0"
+  "\12\202\0\0\0\13\10\0\0\0\12\0\0\0\11\0\0\0\10\0\0\0\6\0\0\0\5\0\0\0"
+  "\3\0\0\0\2\0\0\0\1\210\0\0\0\0\2\0\0\0\1\0\0\0\2\202\0\0\0\3\202\0\0"
+  "\0\4\202\0\0\0\5\202\0\0\0\4\202\0\0\0\3\2\0\0\0\2\0\0\0\1\214\0\0\0"
+  "\0\212\0\0\0\1\207\0\0\0\0"
 };
 
 static extents _shadow_extents = { 0, 0, 0, 0 };
 
 static quad _shadow_quads[] = {
     {
-	{ -4, -4, GRAVITY_NORTH | GRAVITY_WEST },
-	{ 0, 0, GRAVITY_NORTH | GRAVITY_WEST },
-	SHRT_MAX, SHRT_MAX,
-	0,
+	{ -6, -5, GRAVITY_NORTH | GRAVITY_WEST },
+	{ -5, 0, GRAVITY_NORTH | GRAVITY_EAST },
+	11, SHRT_MAX,
+	ALIGN_LEFT,
 	{
 	    1.0, 0.0,
 	    0.0, 1.0,
 	    0.0, 0.0
 	}
     }, {
-	{ 0, -4, GRAVITY_NORTH | GRAVITY_WEST },
-	{ 0, 0, GRAVITY_NORTH | GRAVITY_EAST },
+	{ 5, -5, GRAVITY_NORTH | GRAVITY_WEST },
+	{ -4, 0, GRAVITY_NORTH | GRAVITY_EAST },
 	SHRT_MAX, SHRT_MAX,
 	0,
 	{
 	    0.0, 0.0,
 	    0.0, 1.0,
-	    4.0, 0.0
+	    11.0, 0.0
 	}
     }, {
-	{ 0, -4, GRAVITY_NORTH | GRAVITY_EAST },
-	{ 5, 0, GRAVITY_NORTH | GRAVITY_EAST },
-	SHRT_MAX, SHRT_MAX,
-	0,
+	{ -4, -5, GRAVITY_NORTH | GRAVITY_EAST },
+	{ 8, 0, GRAVITY_NORTH | GRAVITY_EAST },
+	12, SHRT_MAX,
+	ALIGN_RIGHT,
 	{
 	    1.0, 0.0,
 	    0.0, 1.0,
-	    4.0, 0.0
+	    12.0, 0.0
 	}
     },
 
     {
-	{ -4, 0, GRAVITY_NORTH | GRAVITY_WEST },
-	{ 0, 0, GRAVITY_SOUTH | GRAVITY_WEST },
-	SHRT_MAX, SHRT_MAX,
-	0,
+	{ -6, 0, GRAVITY_NORTH | GRAVITY_WEST },
+	{ 0, -5, GRAVITY_SOUTH | GRAVITY_WEST },
+	SHRT_MAX, 5,
+	ALIGN_TOP,
 	{
 	    1.0, 0.0,
-	    0.0, 0.0,
-	    0.0, 4.0
+	    0.0, 1.0,
+	    0.0, 6.0
 	}
     }, {
-
-	{ 0, 0, GRAVITY_NORTH | GRAVITY_EAST },
-	{ 5, 0, GRAVITY_SOUTH | GRAVITY_EAST },
+	{ -6, 5, GRAVITY_NORTH | GRAVITY_WEST },
+	{ 0, -4, GRAVITY_SOUTH | GRAVITY_WEST },
 	SHRT_MAX, SHRT_MAX,
 	0,
 	{
 	    1.0, 0.0,
 	    0.0, 0.0,
-	    5.0, 4.0
+	    0.0, 11.0
+	}
+    }, {
+	{ -6, 6, GRAVITY_NORTH | GRAVITY_WEST },
+	{ 0, 0, GRAVITY_SOUTH | GRAVITY_WEST },
+	SHRT_MAX, 4,
+	ALIGN_BOTTOM,
+	{
+	    1.0, 0.0,
+	    0.0, 1.0,
+	    0.0, 12.0
 	}
     },
 
     {
-	{ -4, 0, GRAVITY_SOUTH | GRAVITY_WEST },
-	{ 0, 5, GRAVITY_SOUTH | GRAVITY_WEST },
+	{ 0, 0, GRAVITY_NORTH | GRAVITY_EAST },
+	{ 8, -5, GRAVITY_SOUTH | GRAVITY_EAST },
+	SHRT_MAX, 5,
+	ALIGN_TOP,
+	{
+	    1.0, 0.0,
+	    0.0, 1.0,
+	    16.0, 6.0
+	}
+    }, {
+	{ 0, 5, GRAVITY_NORTH | GRAVITY_EAST },
+	{ 8, -4, GRAVITY_SOUTH | GRAVITY_EAST },
 	SHRT_MAX, SHRT_MAX,
 	0,
 	{
 	    1.0, 0.0,
-	    0.0, 1.0,
-	    0.0, 5.0
+	    0.0, 0.0,
+	    16.0, 11.0
 	}
     }, {
-	{ 0, 0, GRAVITY_SOUTH | GRAVITY_WEST },
-	{ 0, 5, GRAVITY_SOUTH | GRAVITY_EAST },
+	{ 0, 6, GRAVITY_NORTH | GRAVITY_EAST },
+	{ 8, 0, GRAVITY_SOUTH | GRAVITY_EAST },
+	SHRT_MAX, 4,
+	ALIGN_BOTTOM,
+	{
+	    1.0, 0.0,
+	    0.0, 1.0,
+	    16.0, 12.0
+	}
+    },
+
+    {
+	{ -6, 0, GRAVITY_SOUTH | GRAVITY_WEST },
+	{ -5, 7, GRAVITY_SOUTH | GRAVITY_EAST },
+	11, SHRT_MAX,
+	ALIGN_LEFT,
+	{
+	    1.0, 0.0,
+	    0.0, 1.0,
+	    0.0, 15.0
+	}
+    }, {
+	{ 5,  0, GRAVITY_SOUTH | GRAVITY_WEST },
+	{ -4, 7, GRAVITY_SOUTH | GRAVITY_EAST },
 	SHRT_MAX, SHRT_MAX,
 	0,
 	{
 	    0.0, 0.0,
 	    0.0, 1.0,
-	    4.0, 5.0
+	    11.0, 15.0
 	}
     }, {
-	{ 0, 0, GRAVITY_SOUTH | GRAVITY_EAST },
-	{ 5, 5, GRAVITY_SOUTH | GRAVITY_EAST },
-	SHRT_MAX, SHRT_MAX,
-	0,
+	{ -4, 0, GRAVITY_SOUTH | GRAVITY_EAST },
+	{ 8, 7, GRAVITY_SOUTH | GRAVITY_EAST },
+	12, SHRT_MAX,
+	ALIGN_RIGHT,
 	{
 	    1.0, 0.0,
 	    0.0, 1.0,
-	    5.0, 5.0
+	    12.0, 15.0
 	}
     }
 };
@@ -1925,6 +2006,7 @@ update_default_decorations (GdkScreen *screen)
     Display    *xdisplay = gdk_x11_display_get_xdisplay (gdkdisplay);
     Atom       atom;
     decor_t    d;
+    gint       nShadowQuad;
     gint       nQuad = sizeof (_win_quads) / sizeof (_win_quads[0]);
     quad       quads[nQuad];
     extents    extents = _win_extents;
@@ -1932,14 +2014,14 @@ update_default_decorations (GdkScreen *screen)
     xroot = RootWindowOfScreen (gdk_x11_screen_get_xscreen (screen));
 
     atom = XInternAtom (xdisplay, "_NET_WINDOW_DECOR_BARE", FALSE);
-    nQuad = sizeof (_shadow_quads) / sizeof (_shadow_quads[0]);
+    nShadowQuad = sizeof (_shadow_quads) / sizeof (_shadow_quads[0]);
     decoration_to_property (data, GDK_PIXMAP_XID (shadow_pixmap),
-			    &_shadow_extents, _shadow_quads, nQuad);
+			    &_shadow_extents, _shadow_quads, nShadowQuad);
 
     XChangeProperty (xdisplay, xroot,
 		     atom,
 		     XA_INTEGER,
-		     32, PropModeReplace, (guchar *) data, 5 + 9 * nQuad);
+		     32, PropModeReplace, (guchar *) data, 5 + 9 * nShadowQuad);
 
     d.width  = LEFT_SPACE + 1 + RIGHT_SPACE;
     d.height = titlebar_height + TOP_SPACE + 1 + BOTTOM_SPACE;
